[gd_scene load_steps=26 format=3 uid="uid://jek3vp514mr"]

[ext_resource type="Script" path="res://plants/ShopCards/plant_selection.gd" id="1_efdn8"]
[ext_resource type="Texture2D" uid="uid://68b5isyggee5" path="res://assets/sprites/Board1.png" id="1_wgqan"]
[ext_resource type="Texture2D" uid="uid://bwous6et8ej4t" path="res://ui/logo.png" id="1_ynig0"]
[ext_resource type="Resource" uid="uid://7mv437vdwnme" path="res://plants/ShopCards/AppleTreeCard.tres" id="3_2hbpr"]
[ext_resource type="Texture2D" uid="uid://vvxwya6l7jlw" path="res://assets/sprites/colored_tilemap_packed-export.png" id="3_3sykg"]
[ext_resource type="Resource" uid="uid://8gliloqnundi" path="res://plants/ShopCards/HedgeCard.tres" id="4_yt51p"]
[ext_resource type="Resource" uid="uid://bt87wbo5o1hsr" path="res://plants/ShopCards/CactusCard.tres" id="5_fe8dn"]
[ext_resource type="Resource" uid="uid://0neu41tg2gu8" path="res://plants/ShopCards/BaobabTreeCard.tres" id="6_ccou6"]
[ext_resource type="Resource" uid="uid://cuxw81wdvumpb" path="res://plants/ShopCards/FireFlowerCard.tres" id="7_7mx8r"]
[ext_resource type="Texture2D" uid="uid://cobmq503mdf5m" path="res://assets/sprites/Board2.png" id="8_lkcm4"]
[ext_resource type="Texture2D" uid="uid://cruen0hgeph67" path="res://assets/sprites/arrow_normal.png" id="9_dnjqc"]
[ext_resource type="Texture2D" uid="uid://2fc0k432uk30" path="res://assets/sprites/hourglass.png" id="9_l1ww3"]
[ext_resource type="Texture2D" uid="uid://c30hrx1mhon1o" path="res://assets/sprites/arrow_pressedl.png" id="10_pn27n"]
[ext_resource type="Texture2D" uid="uid://cwpuaw130550" path="res://assets/sprites/Lowrezjam_-_Colored_sprites1.png" id="11_347bj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7qx1u"]
atlas = ExtResource("3_3sykg")
region = Rect2(48, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjmg6"]
atlas = ExtResource("3_3sykg")
region = Rect2(81, 48, 6, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip3cc"]
atlas = ExtResource("3_3sykg")
region = Rect2(73, 40, 6, 8)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckcbl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dylqh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tdqx2"]
atlas = ExtResource("11_347bj")
region = Rect2(167, 143, 5, 6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y8gd6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqra6"]
bg_color = Color(0.768627, 0.580392, 0.286275, 1)
expand_margin_bottom = 1.0

[sub_resource type="Animation" id="Animation_dfmr1"]
resource_name = "Blinking"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer2/PrevButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.372549), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer2/NextButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.372549), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g6w7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer2/PrevButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer2/NextButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kftw2"]
_data = {
"Blinking": SubResource("Animation_dfmr1"),
"RESET": SubResource("Animation_g6w7j")
}

[node name="ColorRect" type="NinePatchRect" node_paths=PackedStringArray("namelabel", "typeicon", "portrait", "costlabel", "timelabel", "buybutton", "desclabel")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wgqan")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource("1_efdn8")
PlantCardList = Array[Resource("res://plants/PlantCardResource.gd")]([ExtResource("3_2hbpr"), ExtResource("4_yt51p"), ExtResource("5_fe8dn"), ExtResource("6_ccou6"), ExtResource("7_7mx8r")])
plant_types = Array[Texture2D]([SubResource("AtlasTexture_7qx1u"), SubResource("AtlasTexture_bjmg6"), SubResource("AtlasTexture_ip3cc")])
namelabel = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer/Plant_name")
typeicon = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer/PlantTypeIcon")
portrait = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer2/Plant_portrait")
costlabel = NodePath("PlantSelectionScreen/VBoxContainer/GridContainer/CostLabel")
timelabel = NodePath("PlantSelectionScreen/VBoxContainer/GridContainer/GrowthtimeLabel")
buybutton = NodePath("PlantSelectionScreen/VBoxContainer/BuyButton")
desclabel = NodePath("PlantSelectionScreen/VBoxContainer/HBoxContainer3/PlantDescription")

[node name="PlantSelectionScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlantSelectionScreen"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlantSelectionScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="VSeparator" type="VSeparator" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_ckcbl")

[node name="Plant_name" type="Label" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Plant name"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="PlantTypeIcon" type="TextureRect" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_ynig0")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="PlantSelectionScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="TextureButton" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("9_dnjqc")
texture_pressed = ExtResource("10_pn27n")
flip_h = true

[node name="Plant_portrait" type="TextureRect" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_ynig0")
stretch_mode = 5

[node name="NinePatchRect" type="NinePatchRect" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer2/Plant_portrait"]
show_behind_parent = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("8_lkcm4")
region_rect = Rect2(0, 0, 10, 7)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="NextButton" type="TextureButton" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("9_dnjqc")
texture_pressed = ExtResource("10_pn27n")

[node name="HSeparator2" type="HSeparator" parent="PlantSelectionScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_dylqh")

[node name="GridContainer" type="GridContainer" parent="PlantSelectionScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 2
columns = 4

[node name="CostIcon" type="TextureRect" parent="PlantSelectionScreen/VBoxContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_tdqx2")
expand_mode = 2
stretch_mode = 5

[node name="CostLabel" type="Label" parent="PlantSelectionScreen/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cost"
vertical_alignment = 2

[node name="TimeIcon" type="TextureRect" parent="PlantSelectionScreen/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_l1ww3")
expand_mode = 3
stretch_mode = 5

[node name="GrowthtimeLabel" type="Label" parent="PlantSelectionScreen/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Time"
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PlantSelectionScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VSeparator" type="VSeparator" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_y8gd6")

[node name="PlantDescription" type="Label" parent="PlantSelectionScreen/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slows"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PlantSelectionScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxFlat_xqra6")

[node name="BuyButton" type="Button" parent="PlantSelectionScreen/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Buy"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kftw2")
}
